a la espera de un logo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -168,7 +168,7 @@ font-family: 'Marhey', cursive;
 
 }
 
-.logo {
+/*.logo {
 
     width: 5rem;
     margin-top: 0rem;
@@ -182,7 +182,7 @@ font-family: 'Marhey', cursive;
     
 
    
-}
+}*/
 .collapse.navbar-collapse {
 
 
